crates/biome_js_parser/tests/js_test_suite/error/glimmer/glimmer_lookalike_temp.gjs
// Test that <temp> (not "template") is properly rejected
// This tests lexer backtracking - should restore position and report clear error
const x = <temp>content</temp>;
